tests/samples/negative/generics/generic_method_unsupported.ax
module generic_method_unsupported;

struct Box {
    value: i32;
}

impl Box {
    fn id<T>() -> T {
        return cast[T](0);
    }
}

fn main() -> i32 {
    Box.id();
    return 0;
}
